// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Result Component should render component when result doesn't have value, and value is angular 1`] = `
<Fragment>
  <Message
    style={
      Object {
        "marginBottom": "1em",
      }
    }
  >
    ±0,5
  </Message>
</Fragment>
`;

exports[`Result Component should render component when result doesn't have value, and value is not angular 1`] = `
<Fragment>
  <Message
    style={
      Object {
        "marginBottom": "1em",
      }
    }
  >
    12±0,5
  </Message>
</Fragment>
`;

exports[`Result Component should render component when result have value 1`] = `
<Fragment>
  <Message
    style={
      Object {
        "marginBottom": "1em",
      }
    }
  >
    Value must be lower than 4000
  </Message>
</Fragment>
`;

exports[`Result Component should render component when result have value 2`] = `
<Fragment>
  <Message
    style={
      Object {
        "marginBottom": "1em",
      }
    }
  >
    Thickness should be greater than 0
  </Message>
</Fragment>
`;
